traefik-manifests/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-http-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - traefik.ranjan.host
    secretName: wildcard-ranjan-host
  rules:
  - host: traefik.ranjan.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 8080
